--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.9.*
+  - python>=3.9
   - pip
   - setuptools>=62.0.0
   - cryptography
@@ -33,6 +33,7 @@ dependencies:
   - ipykernel
   - pip:
       - datajoint
-      - ruamel.yaml
       - python-dotenv
+      - slack-sdk
+      - ruamel.yaml
       - "-e ."
