feat: ✨ add SNSNotifier

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ datajoint @ git+https://github.com/ttngu207/datajoint-python.git@populate_succes
 termcolor
 slack-sdk
 python-dotenv
+boto3
+requests
